--- a/package.json
+++ b/package.json
@@ -18,24 +18,30 @@
   "scripts": {
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "prepare": "husky install",
-    "lint": "eslint --ext .ts",
+    "lint": "eslint . --ext .ts",
     "lint:fix": "npm run lint --fix",
-    "check:types": "tsc --noEmit"
+    "check:types": "tsc --noEmit",
+    "prepare": "husky install",
+    "test": "vitest run --coverage",
+    "test:watch": "vitest --watch"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
     "@types/node": "^20.11.30",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@vitest/coverage-v8": "^1.4.0",
     "eslint": "^8.57.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
     "husky": "^8.0.0",
-    "typescript": "^5.4.3",
+    "typescript": "^5.4.4",
     "vite": "^5.2.0",
-    "vite-plugin-dts": "^3.8.1"
+    "vite-plugin-dts": "^3.8.1",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^1.4.0"
   }
 }
