--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,12 @@
     "isolatedModules": true,
     "noEmit": true,
 
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ],
+    },
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
