--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "check:types": "tsc --noEmit",
     "prepare": "husky install",
     "test": "vitest run --coverage",
-    "test:watch": "vitest --watch"
+    "test:watch": "vitest --watch",
+    "test:mutation": "stryker run",
+    "ts-coverage": "typescript-coverage-report"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
+    "@stryker-mutator/core": "^8.2.6",
+    "@stryker-mutator/vitest-runner": "^8.2.6",
     "@types/node": "^20.11.30",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@vitest/coverage-v8": "^1.4.0",
@@ -39,6 +43,7 @@
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "husky": "^8.0.0",
     "typescript": "^5.4.4",
+    "typescript-coverage-report": "^1.0.0",
     "vite": "^5.2.0",
     "vite-plugin-dts": "^3.8.1",
     "vite-tsconfig-paths": "^4.3.2",
