--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "utils-library",
+  "name": "form-validations-library",
   "version": "0.0.0",
   "type": "module",
   "main": "./dist/my-lib.umd.cjs",
