--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,5 +24,8 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4.0.1
 
+      - name: Github & npm flow
+        uses: npm{$secrets.NPM_USER}
+
       - name: Build
         run: npm run build
